package com.medicitas.api.appointment;

public enum AppointmentStatus {
    BOOKED,
    CANCELLED,
    ATTENDED,
    NO_SHOW
}
