package com.medicitas.api.notification;

public enum NotificationStatus {
    PENDING,
    SENT,
    FAILED,
    CANCELLED
}
