package com.medicitas.api.notification;

public enum NotificationType {
    CONFIRMATION,
    REMINDER,
    RESCHEDULE,
    CANCELLATION
}
