package com.medicitas.api.patient;

public enum CoverageStatus {
    ACTIVE,
    SUSPENDED,
    EXPIRED
}
