package com.medicitas.api.schedule;

public enum SlotStatus {
    FREE,
    BOOKED,
    BLOCKED
}
